--- a/ForgCore/ForgCore.csproj
+++ b/ForgCore/ForgCore.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Debug.cs" />
+    <Compile Include="Forg.cs" />
     <Compile Include="Primitives.cs" />
     <Compile Include="World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
