--- a/forgCompiler/forgCompiler.fsproj
+++ b/forgCompiler/forgCompiler.fsproj
@@ -63,5 +63,8 @@
       <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="forgdotnetify.fs" />
+  </ItemGroup>
   <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
 </Project>
